created setup script

--- a/.env
+++ b/.env
@@ -8,3 +8,8 @@ ARC_PORT2575=2575
 MYSQL_PORT=3333
 REPORTS_PORT80=80
 REPORTS_PORT443=443
+OVIYAM_8080=81
+OVIYAM_1025=1025
+REPORTSBACK_80=5100
+REPORTSBACK_443=5101
+DB_PW=<<secret>>
