updated compose and env

--- a/.env
+++ b/.env
@@ -12,4 +12,6 @@ OVIYAM_8080=81
 OVIYAM_1025=1025
 REPORTSBACK_80=5100
 REPORTSBACK_443=5101
+OPACSVIEWERURL=https://rxreports.placaxconsulting.com.ar/oviyam/viewer.html
+TUNNEL_TOKEN=CHANGEIT
 DB_PW=secret
