--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -56,24 +56,6 @@ services:
       - "${OVIYAM_1025}:1025"
     volumes:
       - /var/local/placax-reports/oviyam:/usr/local/tomcat/work
-  plaxreports:
-    container_name: plaxreports
-    image:  alejovac/dpacsreports:1.0.1
-    depends_on:
-      - reportsdb
-      - arc
-    restart: unless-stopped
-    ports:
-      - "${REPORTSBACK_80}:80"
-      - "${REPORTSBACK_443}:443"
-    environment:
-        ASPNETCORE_ENVIRONMENT: Development
-        OPACSVIEWERURL: ${OPACSVIEWERURL}
-        DBSERVER: reportsdb
-        DBPORT: 3306
-    networks:
-      default:
-        ipv4_address: 172.20.0.33
   reportsdb:
     container_name: reportsdb
     image: mysql:8.0.23
@@ -87,16 +69,28 @@ services:
     networks:
       default:
         ipv4_address: 172.20.0.44
-  reportsweb:
-    container_name: reportsweb
-    image: alejovac/opacsreportsweb:v1.0.23
+  plaxreports:
+    container_name: plaxreports
+    image:  alejovac/dpacsreports:1.0.2
+    depends_on:
+      - reportsdb
+      - arc
     restart: unless-stopped
     ports:
-      - "${REPORTS_PORT80}:80"
-      - "${REPORTS_PORT443}:443"
+      - "${REPORTSBACK_80}:80"
+      - "${REPORTSBACK_443}:443"
+    environment:
+        ASPNETCORE_ENVIRONMENT: Development
+        OPACSVIEWERURL: ${OPACSVIEWERURL}
+        DBSERVER: reportsdb
+        DBPORT: 3306
+        DBPASS: ${DB_PW}
+    networks:
+      default:
+        ipv4_address: 172.20.0.33
   reportsworker:
     container_name: reportsworker
-    image: alejovac/dpacsworker:latest
+    image: alejovac/dpacsworker:1.0.2
     restart: unless-stopped
     depends_on:
       - reportsdb
@@ -105,6 +99,14 @@ services:
         DBPORT: 3306
         DCM4CHEESERVER: db #192.168.1.81
         DCM4CHEEPORT: 5432
+        DBPASS: ${DB_PW}
+  reportsweb:
+    container_name: reportsweb
+    image: alejovac/opacsreportsweb:v1.0.26
+    restart: unless-stopped
+    ports:
+      - "${REPORTS_PORT80}:80"
+      - "${REPORTS_PORT443}:443"
   tunnel:
     image: cloudflare/cloudflared:latest
     command: tunnel --no-autoupdate run
