--- a/nginx.conf
+++ b/nginx.conf
@@ -17,5 +17,9 @@ http {
         location /oviyam/ {
             proxy_pass http://192.168.1.81:81/oviyam/;
         }
+
+        location /soviyam/ {
+            proxy_pass http://192.168.1.81:81/ioviyam/;
+        }
     }
 }
