--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -47,7 +47,7 @@ services:
       - /var/local/placax-reports/wildfly:/opt/wildfly/standalone
   oviyam:
     container_name: oviyam
-    image:  postar/oviyam:1.0.2
+    image:  postar/oviyam:1.0.3
     restart: unless-stopped
     depends_on:
       - arc
@@ -71,7 +71,7 @@ services:
         ipv4_address: 172.20.0.44
   plaxreports:
     container_name: plaxreports
-    image:  alejovac/dpacsreports:1.0.3
+    image:  alejovac/dpacsreports:1.0.2
     depends_on:
       - reportsdb
       - arc
@@ -112,9 +112,10 @@ services:
       - ./nginx.conf:/etc/nginx/nginx.conf
   tunnel:
     image: cloudflare/cloudflared:latest
-    command: tunnel --no-autoupdate run
+    command: tunnel --no-autoupdate run --token ${TUNNEL_TOKEN}
     restart: unless-stopped
-    container_name: tunnel
+    container_name: placaxtunnel
+    network_mode: "host"
 networks:
   default:
       name: dcm4chee_default
