Updated config to use MeSy

--- a/.env
+++ b/.env
@@ -1,17 +1,25 @@
+#LDAP
 LDAP_PORT=389
+#Dicom DB
 POSTGRES_PORT=5432
+#Dicom Archive
 ARC_PORT8080=8080
 ARC_PORT8443=8443
 ARC_PORT9990=9990
 ARC_PORT11112=11112
 ARC_PORT2575=2575
+#Worker DB
 MYSQL_PORT=3333
+#Frontend
 REPORTS_PORT80=80
 REPORTS_PORT443=443
+#Dicom Viewer
 OVIYAM_8080=81
 OVIYAM_1025=1025
-REPORTSBACK_80=5100
-REPORTSBACK_443=5101
-OPACSVIEWERURL=https://dcmreports.placaxconsulting.com.ar/oviyam/viewer.html
+#Backend
+API_80=5100
+API_443=5101
+#Cloudflare Tunnel Token
 TUNNEL_TOKEN=CHANGEIT
+#Databases Password
 DB_PW=secret
