--- a/nginx.conf
+++ b/nginx.conf
@@ -15,11 +15,11 @@ http {
         }
 
         location /oviyam/ {
-            proxy_pass http://192.168.1.81:81/oviyam/;
+            proxy_pass http://localhost:81/oviyam/;
         }
 
         location /soviyam/ {
-            proxy_pass http://192.168.1.81:81/ioviyam/;
+            proxy_pass http://localhost:81/ioviyam/;
         }
     }
 }
