--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -74,7 +74,7 @@ services:
         ipv4_address: 172.20.0.44
   api:
     container_name: api
-    image:  alejovac/mesyapi:2.0.1
+    image:  alejovac/mesyapi:2.0.2
     depends_on:
       - reportsdb
       - arc
@@ -88,6 +88,8 @@ services:
       DBSERVER: reportsdb
       DBPORT: 3306
       DBPASS: ${DB_PW}
+    volumes:
+     - /var/local/placax-reports/api/.scr:/.scr
     networks:
       default:
         ipv4_address: 172.20.0.33
