--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -74,7 +74,7 @@ services:
         ipv4_address: 172.20.0.44
   api:
     container_name: api
-    image:  alejovac/mesyapi:2.0.2
+    image:  alejovac/mesyapi:2.0.3
     depends_on:
       - reportsdb
       - arc
@@ -89,7 +89,7 @@ services:
       DBPORT: 3306
       DBPASS: ${DB_PW}
     volumes:
-     - /var/local/placax-reports/api/.scr:/.scr
+     - /var/local/placax-reports/api/:/license
     networks:
       default:
         ipv4_address: 172.20.0.33
