--- a/.env
+++ b/.env
@@ -8,6 +8,9 @@ ARC_PORT8443=8443
 ARC_PORT9990=9990
 ARC_PORT11112=11112
 ARC_PORT2575=2575
+ARC_PORT9993=9993
+ARC_PORT2672=2762
+ARC_PORT12575=12575
 #Worker DB
 MYSQL_PORT=3333
 #Frontend
@@ -16,6 +19,7 @@ REPORTS_PORT443=443
 #Dicom Viewer
 OVIYAM_8080=81
 OVIYAM_1025=1025
+OHIF_80=82
 #Backend
 API_80=5100
 API_443=5101
