--- a/nginx.conf
+++ b/nginx.conf
@@ -18,8 +18,21 @@ http {
             proxy_pass http://localhost:81/oviyam/;
         }
 
+        location /oviyam27/ {
+            proxy_pass http://localhost:81/oviyam27/;
+        }
+
         location /soviyam/ {
             proxy_pass http://localhost:81/ioviyam/;
+        }
+
+        location /ohif/ {
+            add_header Cross-Origin-Resource-Policy cross-origin;
+            proxy_pass http://localhost:82/;
+        }
+
+        location /arc/ {
+            proxy_pass http://localhost:8080/;
         }
     }
 }
