--- a/nginx.conf
+++ b/nginx.conf
@@ -28,11 +28,11 @@ http {
 
         location /ohif/ {
             add_header Cross-Origin-Resource-Policy cross-origin;
-            proxy_pass http://localhost:82/;
+            proxy_pass http://ohif:82/;
         }
 
         location /arc/ {
-            proxy_pass http://localhost:8080/;
+            proxy_pass http://arc:8080/;
         }
     }
 }
