--- a/nginx.conf
+++ b/nginx.conf
@@ -15,20 +15,20 @@ http {
         }
 
         location /oviyam/ {
-            proxy_pass http://localhost:81/oviyam/;
+            proxy_pass http://oviyam:8080/oviyam/;
         }
 
         location /oviyam27/ {
-            proxy_pass http://localhost:81/oviyam27/;
+            proxy_pass http://oviyam:8080/oviyam27/;
         }
 
         location /soviyam/ {
-            proxy_pass http://localhost:81/ioviyam/;
+            proxy_pass http://oviyam:8080/ioviyam/;
         }
 
         location /ohif/ {
             add_header Cross-Origin-Resource-Policy cross-origin;
-            proxy_pass http://ohif:82/;
+            proxy_pass http://ohif:80/;
         }
 
         location /arc/ {
