--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -433,12 +433,12 @@ services:
     volumes:
       - ./nginx.conf:/etc/nginx/nginx.conf
 #################################
-#  tunnel:
-#    image: cloudflare/cloudflared:latest
-#    command: tunnel --no-autoupdate run --token ${TUNNEL_TOKEN}
-#    restart: unless-stopped
-#    container_name: placaxtunnel
-#    network_mode: "host"
+  tunnel:
+    image: cloudflare/cloudflared:latest
+    command: tunnel --no-autoupdate run --token ${TUNNEL_TOKEN}
+    restart: unless-stopped
+    container_name: placaxtunnel
+    network_mode: "host"
   ohif:
     container_name: ohif
     image: alejovac/messy-ohif-viewer:3.8.0
