--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -96,6 +96,7 @@ services:
       TZ: "America/Argentina/Buenos_Aires"
   gworchestrator:
     container_name: gworchestrator
+    user: root
     image: alejovac/mesygworchestrator:0.1.0b
     restart: unless-stopped
     depends_on:
@@ -391,6 +392,7 @@ services:
       TZ: "America/Argentina/Buenos_Aires"
   mslicense:
     container_name: mslicense
+    user: root
     image: alejovac/mesymslicense:0.1.0
     restart: unless-stopped
     volumes:
