--- a/nginx.conf
+++ b/nginx.conf
@@ -31,6 +31,11 @@ http {
             proxy_pass http://ohif:80/;
         }
 
+        location /ohifl/ {
+            add_header Cross-Origin-Resource-Policy cross-origin;
+            proxy_pass http://ohiflocal:80/;
+        }
+
         location /arc/ {
             proxy_pass http://arc:8080/;
         }
