--- a/docker-compose2.0.yml
+++ b/docker-compose2.0.yml
@@ -81,7 +81,22 @@ services:
      - /var/local/mesy-reports/mesy/reportsdb:/var/lib/mysql
   reportsapi:
     container_name: reportsapi
-    image: alejovac/mesyapireports:0.1.0
+    image: alejovac/mesyapireports:2.0.0
+    restart: unless-stopped
+    depends_on:
+      - reportsdb
+    ports:
+      - "${API_80}:8080"
+      - "${API_443}:8081"
+    environment:
+      DBSERVER: "reportsdb"
+      DBPORT: "3306"
+      DBPASS: ${DB_PW}
+      ROUTERURI: "http://gworchestrator:8080"
+      TZ: "America/Argentina/Buenos_Aires"
+  yourhealthapi:
+    container_name: yourhealthapi
+    image: alejovac/mesyapireports:2.0.0
     restart: unless-stopped
     depends_on:
       - reportsdb
@@ -97,7 +112,7 @@ services:
   gworchestrator:
     container_name: gworchestrator
     user: root
-    image: alejovac/mesygworchestrator:0.1.0b
+    image: alejovac/mesygworchestrator:2.0.0
     restart: unless-stopped
     depends_on:
       - reportsdb
@@ -150,7 +165,7 @@ services:
       TZ: "America/Argentina/Buenos_Aires"
   msidentity:
     container_name: msidentity
-    image: alejovac/mesymsidentity:0.1.0
+    image: alejovac/mesymsidentity:2.0.0
     restart: unless-stopped
     depends_on:
       - reportsdb
@@ -164,7 +179,7 @@ services:
       TZ: "America/Argentina/Buenos_Aires"
   mscarousel:
     container_name: mscarousel
-    image: alejovac/mesymscarousel:0.1.0
+    image: alejovac/mesymscarousel:2.0.0
     restart: unless-stopped
     depends_on:
       - reportsdb
@@ -179,7 +194,7 @@ services:
       TZ: "America/Argentina/Buenos_Aires"
   msclient:
     container_name: msclient
-    image: alejovac/mesymsclient:0.1.0
+    image: alejovac/mesymsclient:2.0.0
     restart: unless-stopped
     depends_on:
       - reportsdb
@@ -194,7 +209,7 @@ services:
       TZ: "America/Argentina/Buenos_Aires"
   msdepartment:
     container_name: msdepartment
-    image: alejovac/mesymsdepartment:0.1.0
+    image: alejovac/mesymsdepartment:2.0.0
     restart: unless-stopped
     ports:
       - "8089:8080"
@@ -212,7 +227,7 @@ services:
       TZ: "America/Argentina/Buenos_Aires"
   msinstitution:
     container_name: msinstitution
-    image: alejovac/mesymsinstitution:0.1.0
+    image: alejovac/mesymsinstitution:2.0.0
     restart: unless-stopped
     depends_on:
       - reportsdb
@@ -227,7 +242,7 @@ services:
       TZ: "America/Argentina/Buenos_Aires"
   msinstitutiontag:
     container_name: msinstitutiontag
-    image: alejovac/mesymsinstitutiontag:0.1.0
+    image: alejovac/mesymsinstitutiontag:2.0.0
     restart: unless-stopped
     depends_on:
       - reportsdb
@@ -242,7 +257,7 @@ services:
       TZ: "America/Argentina/Buenos_Aires"
   mspatient:
     container_name: mspatient
-    image: alejovac/mesymspatient:0.1.0
+    image: alejovac/mesymspatient:2.0.0
     restart: unless-stopped
     depends_on:
       - reportsdb
@@ -257,7 +272,7 @@ services:
       TZ: "America/Argentina/Buenos_Aires"
   msreport:
     container_name: msreport
-    image: alejovac/mesymsreport:0.1.0
+    image: alejovac/mesymsreport:2.0.0
     restart: unless-stopped
     depends_on:
       - reportsdb
@@ -272,7 +287,7 @@ services:
       TZ: "America/Argentina/Buenos_Aires"
   msreporttemplate:
     container_name: msreporttemplate
-    image: alejovac/mesymsreporttemplate:0.1.0
+    image: alejovac/mesymsreporttemplate:2.0.0
     restart: unless-stopped
     depends_on:
       - reportsdb
@@ -287,7 +302,7 @@ services:
       TZ: "America/Argentina/Buenos_Aires"
   msstation:
     container_name: msstation
-    image: alejovac/mesymsstation:0.1.0
+    image: alejovac/mesymsstation:2.0.0
     restart: unless-stopped
     depends_on:
       - reportsdb
@@ -302,7 +317,7 @@ services:
       TZ: "America/Argentina/Buenos_Aires"
   msstudy:
     container_name: msstudy
-    image: alejovac/mesymsstudy:0.1.0
+    image: alejovac/mesymsstudy:2.0.0
     restart: unless-stopped
     depends_on:
       - reportsdb
@@ -317,7 +332,7 @@ services:
       TZ: "America/Argentina/Buenos_Aires"
   msstudyviewer:
     container_name: msstudyviewer
-    image: alejovac/mesymsstudyviewer:0.1.0
+    image: alejovac/mesymsstudyviewer:2.0.0
     restart: unless-stopped
     depends_on:
       - reportsdb
@@ -332,7 +347,7 @@ services:
       TZ: "America/Argentina/Buenos_Aires"
   mssystemconfiguration:
     container_name: mssystemconfiguration
-    image: alejovac/mesymssystemconfiguration:0.1.0
+    image: alejovac/mesymssystemconfiguration:2.0.0
     restart: unless-stopped
     depends_on:
       - reportsdb
@@ -347,7 +362,7 @@ services:
       TZ: "America/Argentina/Buenos_Aires"
   mssystemrol:
     container_name: mssystemrol
-    image: alejovac/mesymssystemrol:0.1.0
+    image: alejovac/mesymssystemrol:2.0.0
     restart: unless-stopped
     depends_on:
       - reportsdb
@@ -362,7 +377,7 @@ services:
       TZ: "America/Argentina/Buenos_Aires"
   msuser:
     container_name: msuser
-    image: alejovac/mesymsuser:0.1.0-alpine
+    image: alejovac/mesymsuser:2.0.0-alpine
     restart: unless-stopped
     depends_on:
       - reportsdb
@@ -377,7 +392,7 @@ services:
       TZ: "America/Argentina/Buenos_Aires"
   msworker:
     container_name: msworker
-    image: alejovac/mesymsworker:0.1.0
+    image: alejovac/mesymsworker:2.0.0
     restart: unless-stopped
     depends_on:
       - reportsdb
@@ -393,7 +408,7 @@ services:
   mslicense:
     container_name: mslicense
     user: root
-    image: alejovac/mesymslicense:0.1.0
+    image: alejovac/mesymslicense:2.0.0
     restart: unless-stopped
     volumes:
      - /var/local/mesy-reports/mesy/api/:/app/license
@@ -411,7 +426,7 @@ services:
 #############################################
   worker:
     container_name: worker
-    image: alejovac/mesywkdcm4chee:0.1.0-V5.32
+    image: alejovac/mesywkdcm4chee:2.0.0-V5.32
     restart: unless-stopped
     depends_on:
       - reportsdb
@@ -427,13 +442,22 @@ services:
       PACSPASS: ${DB_PW}
   adminweb:
     container_name: adminweb
-    image: alejovac/mesyadmin:0.1.0
+    image: alejovac/mesyadmin:2.0.0
     restart: unless-stopped
     ports:
       - "${REPORTS_PORT80}:80"
       - "${REPORTS_PORT443}:443"
     volumes:
       - ./nginx.conf:/etc/nginx/nginx.conf
+  yourhealthweb:
+    container_name: yourhealthweb
+    image: alejovac/mesyadmin:2.0.0
+    restart: unless-stopped
+    ports:
+      - "${REPORTS_PORT80}:80"
+      - "${REPORTS_PORT443}:443"
+    volumes:
+      - ./nginxyh.conf:/etc/nginx/nginx.conf
 #################################
   tunnel:
     image: cloudflare/cloudflared:latest
