corrected env and compose

--- a/.env
+++ b/.env
@@ -24,6 +24,8 @@ OHIF_Local=83
 #Backend
 API_80=5100
 API_443=5101
+YHAPI_80=5200
+YHAPI_443=5201
 #Cloudflare Tunnel Token
 TUNNEL_TOKEN=CHANGEIT
 #Databases Password
