updated env and compose

--- a/.env
+++ b/.env
@@ -16,6 +16,8 @@ MYSQL_PORT=3333
 #Frontend
 REPORTS_PORT80=80
 REPORTS_PORT443=443
+YH_PORT80=82
+YH_PORT443=444
 #Dicom Viewer
 OVIYAM_8080=81
 OVIYAM_1025=1025
